objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Customer Support</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Completed</fullName>
        </values>
        <values>
            <fullName>Long-Term</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Transfer</fullName>
        </values>
        <values>
            <fullName>Wait%2FCust</fullName>
        </values>
        <values>
            <fullName>Wait%2FExpert</fullName>
        </values>
        <values>
            <fullName>Wait%2FJIRA</fullName>
        </values>
        <values>
            <fullName>Wait%2FRelease</fullName>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Default Support Process</fullName>
        <description>Default record type support process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Completed</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Transfer</fullName>
        </values>
        <values>
            <fullName>Wait%2FCCR</fullName>
        </values>
        <values>
            <fullName>Wait%2FCritical CCR</fullName>
        </values>
        <values>
            <fullName>Wait%2FCust</fullName>
        </values>
        <values>
            <fullName>Wait%2FExpert</fullName>
        </values>
        <values>
            <fullName>Wait%2FJIRA</fullName>
        </values>
        <values>
            <fullName>Wait%2FRelease</fullName>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Service Group Support</fullName>
        <description>ServiceMax Support Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Future Service</fullName>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <fields>
        <fullName>AEContactFullName__c</fullName>
        <formula>TRIM(AE_Contact__r.FirstName +&apos; &apos;+ AE_Contact__r.LastName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AEContactFullName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AE_Backup_Email__c</fullName>
        <label>AE Backup Email</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AE_Backup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AE Backup</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AE_Contact_Email__c</fullName>
        <formula>AE_Contact__r.Email</formula>
        <label>AE Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AE_Contact_Phone_Number__c</fullName>
        <formula>AE_Contact__r.Phone</formula>
        <label>AE Contact Phone Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AE_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AE Contact</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2) OR 3 OR 4</booleanFilter>
            <errorMessage>AE Contact associated to this Case is inactive. Please activate AE Contact record before updating the Case.</errorMessage>
            <filterItems>
                <field>Contact.Employee_Flag__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Contact.Active_Status__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>Integration</value>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>5_1 - Data Steward</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AM_Scores__c</fullName>
        <formula>CASE(Status, 
&quot;Open&quot;, 0, 
&quot;New&quot;, 4, 
&quot;Transfer&quot;, 0, 
&quot;Wait/Cust&quot;, 1, 
&quot;Wait/Expert&quot;, 1, 
&quot;Wait/Release&quot;, 1, 
&quot;Wait/Critical CCR&quot;, 1, 
&quot;Wait/CCR&quot;, 0, 
&quot;Wait/JIRA&quot;, 0, 
&quot;Working&quot;, 2, 
&quot;Completed&quot;, 0, 
&quot;Closed&quot;, 0, 
&quot;On Hold&quot;, 0, 
&quot;Escalated&quot;, 0, 
&quot;CID&quot;, 0, 
&quot;Completed - Open Items Pending&quot;, 0, 
&quot;Closed – Open Items Pending&quot;, 0, 
&quot;Future Service&quot;, 0, 
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AM Scores</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <label>Account Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Add_Manager__c</fullName>
        <defaultValue>false</defaultValue>
        <description>used for case notification when owner is person and not queue</description>
        <label>Add Manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Advanced_Support_All_Products__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Advanced Support All Products</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Advanced_Support_CSC_Name__c</fullName>
        <label>Advanced Support CSC Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Advanced_Support_CSC__c</fullName>
        <label>Advanced Support CSC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Advanced_Support_ChatterGroup__c</fullName>
        <label>Advanced Support ChatterGroup</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Advanced_Support_Flag1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Advanced Support Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Advanced_Support_Group_ID__c</fullName>
        <label>Advanced Support Group ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Advanced_Support_Group_Name__c</fullName>
        <label>Advanced Support Group Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Advanced_Support_Queue__c</fullName>
        <label>Advanced Support Queue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alt_Case_Num_Transition__c</fullName>
        <description>This field will be used to show the value of the Case&apos;s Alternate Case Number if available. If not, it will show the value of the associated CCRs Customer Reference. If both are blank, it will have no value.</description>
        <formula>IF( 
Alt_Case_Num__c = null, 
CCR__r.Customer_Reference__c, 
Alt_Case_Num__c 
)</formula>
        <label>Alternate Case Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alt_Case_Num__c</fullName>
        <externalId>true</externalId>
        <label>Alt Case Num</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AppNote__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select if AppNote is used in resolving this case..</description>
        <inlineHelpText>Select if AppNote is used in resolving this case.</inlineHelpText>
        <label>AppNote</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Article_CheckBox__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select if Articles is used in resolving this case.</description>
        <inlineHelpText>Select if Articles is used in resolving this case.</inlineHelpText>
        <label>Article</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Article__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This lookup relation is used to track which cases have used any article for case resolution. This is only meant for tracking at the backend and reporting, not for page layouts.</description>
        <label>Article</label>
        <referenceTo>Article__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assign_using_active_assignment_rules__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Attach default Case Team to case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assigned_Date__c</fullName>
        <label>Assigned Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Assignment_Made__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Mark to designate the case has previously been assigned manually or previously assigned.</description>
        <inlineHelpText>Mark to designate the case has previously been assigned manually or previously assigned.</inlineHelpText>
        <label>Assignment Made</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assignment_Reason__c</fullName>
        <description>Not for display.  Used to debug assignment rules.</description>
        <inlineHelpText>Not for display.  Used to debug assignment rules.</inlineHelpText>
        <label>Assignment Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Assignment_Status__c</fullName>
        <description>Status to keep track of delay assignment.</description>
        <inlineHelpText>Status to keep track of delay assignment.</inlineHelpText>
        <label>Assignment Status</label>
        <picklist>
            <picklistValues>
                <fullName>Check Assignment</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Delay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Do Reassign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Case Owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Find Assignment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Assignment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Case Owner Reassign</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Attach_Config_File_To_Installed_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attach Config File To Installed Product?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Auto_Close_Date__c</fullName>
        <label>Auto Close Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Auto_Close_Days_From_Notification__c</fullName>
        <formula>Auto_Complete_Days__c + Auto_Close_Days__c - Auto_Complete_Notification_Days__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Auto Close Days From Notification</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Auto_Close_Days_From_Wait_Cust__c</fullName>
        <formula>Auto_Complete_Days__c + Auto_Close_Days__c</formula>
        <label>Auto Close Days From Wait/Cust</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Auto_Close_Days__c</fullName>
        <formula>CASE( Product_Type__c,
 &quot;DIP&quot;, VALUE($Setup.CaseAutoCompletedClosedSettings__c.Auto_Close_Days_DIP__c),
 &quot;VIP&quot;, VALUE($Setup.CaseAutoCompletedClosedSettings__c.Auto_Close_Days_VIP__c),
 &quot;TIP&quot;, VALUE($Setup.CaseAutoCompletedClosedSettings__c.Auto_Close_Days_TIP__c),
 0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Auto Close Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Auto_Close_Notification_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Close Notification Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Auto_Close_Validation_Failed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Close Validation Failed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Auto_Close_Validation_Failure_Date__c</fullName>
        <label>Auto Close Validation Failure Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Auto_Complete_Date__c</fullName>
        <label>Auto Complete Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Auto_Complete_Days_From_Notification__c</fullName>
        <formula>Auto_Complete_Days__c - Auto_Complete_Notification_Days__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Auto Complete Days From Notification</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Auto_Complete_Days__c</fullName>
        <formula>CASE( Product_Type__c,
 &quot;DIP&quot;, VALUE($Setup.CaseAutoCompletedClosedSettings__c.Auto_Complete_Days_DIP__c),
 &quot;VIP&quot;, VALUE($Setup.CaseAutoCompletedClosedSettings__c.Auto_Complete_Days_VIP__c),
 &quot;TIP&quot;, VALUE($Setup.CaseAutoCompletedClosedSettings__c.Auto_Complete_Days_TIP__c),
 0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Auto Complete Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Auto_Complete_Notification_Days__c</fullName>
        <formula>CASE(
    Product_Type__c,
    &quot;DIP&quot;, VALUE($Setup.CaseAutoCompletedClosedSettings__c.Auto_Notification_Days_DIP__c),
    &quot;TIP&quot;, VALUE($Setup.CaseAutoCompletedClosedSettings__c.Auto_Notification_Days_TIP__c),
    &quot;VIP&quot;, VALUE($Setup.CaseAutoCompletedClosedSettings__c.Auto_Notification_Days_VIP__c),
    0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Auto Complete Notification Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Auto_Complete_Transition__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Complete Transition</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Auto_Notification_Date_DIP__c</fullName>
        <label>Auto Notification Date DIP</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Auto_Notification_Date_TIP__c</fullName>
        <label>Auto Notification Date TIP</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Auto_Notification_Date_VIP__c</fullName>
        <label>Auto Notification Date VIP</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BU_Summary_Attribute__c</fullName>
        <label>BU_Summary_Attribute</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brief__c</fullName>
        <label>Brief</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>By_Pass_Validation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>By Pass Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCR_All_State__c</fullName>
        <label>CCR_All_State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCR_Id_For_Template__c</fullName>
        <formula>CCR__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CCR_Id_For_Template</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCR_SMAX__c</fullName>
        <label>CCR</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CCR_State__c</fullName>
        <label>CCR State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bug/Enh CCR</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>((1 OR 2) AND 3) OR 4 OR 5 OR 6 OR 7</booleanFilter>
            <filterItems>
                <field>CCR__c.Case__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>CCR__c.Case__c</field>
                <operation>equals</operation>
                <valueField>$Source.Id</valueField>
            </filterItems>
            <filterItems>
                <field>CCR__c.Request_Type__c</field>
                <operation>equals</operation>
                <value>Bug, Enhancement</value>
            </filterItems>
            <filterItems>
                <field>$User.LastName</field>
                <operation>equals</operation>
                <value>Migration</value>
            </filterItems>
            <filterItems>
                <field>$User.Is_Data_Steward__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>5_1 - Data Steward</value>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>Integration</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>CCR__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CC_Emails__c</fullName>
        <label>CC Emails</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CDN_Last_Modified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CDN Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CDN_Last_Modified_Date__c</fullName>
        <description>store the date time when the record is updated last time by user other than Cadence code migration.</description>
        <label>CDN Last Modified Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CDN_Last_Modified_Only_Date__c</fullName>
        <formula>DATEVALUE( CDN_Last_Modified_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CDN Last Modified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>COS_Notify_CC_Emails__c</fullName>
        <defaultValue>false</defaultValue>
        <label>COS Notify CC Emails</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>COS_Visibility__c</fullName>
        <defaultValue>false</defaultValue>
        <label>COS Visibility</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CaseMileStoneFired__c</fullName>
        <defaultValue>0</defaultValue>
        <label>CaseMileStoneFired</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Age__c</fullName>
        <description>Determines the age of a Case. Old Formula : ROUND(NOW()-CreatedDate, 0)  
New Formula: IF( IsClosed , ROUND( ClosedDate - CreatedDate, 0), ROUND(NOW()-CreatedDate, 0))</description>
        <formula>IF( IsClosed , ROUND( ClosedDate - CreatedDate, 0), ROUND(NOW()-CreatedDate, 0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_City__c</fullName>
        <label>Case City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Color_DIP__c</fullName>
        <description>DIP record type formula logic for case color.</description>
        <formula>Case( $RecordType.Name, &quot;DIP&quot;,
IMAGE(
IF( OR(Ispickval(Status, &quot;Completed&quot;), Ispickval(Status, &quot;Closed&quot;)), &quot;/resource/green_flag&quot;, 
IF (Case_Age__c  &gt; 90, &quot;/resource/red_flag&quot;,
IF (AND(Ispickval(Status, &quot;New&quot;), Now() - CDN_Last_Modified_Date__c &gt; 1), &quot;/resource/red_flag&quot;,
IF (AND(Now() - CDN_Last_Modified_Date__c &gt; 14,OR(Ispickval(Status, &quot;Working&quot;), Ispickval(Status, &quot;Wait/Expert&quot;))), &quot;/resource/red_flag&quot;,
IF(Case_Age__c &gt; 30, &quot;/resource/yellow_flag&quot;,
IF(AND(Now() - CDN_Last_Modified_Date__c &gt; 7,OR(Ispickval(Status, &quot;Working&quot;), Ispickval(Status, &quot;Wait/Expert&quot;))), &quot;/resource/yellow_flag&quot;, &quot;/resource/green_flag&quot; )))))), &quot;Error&quot;)
 ,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Color DIP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Color_Default__c</fullName>
        <description>Default record type logic for case color.</description>
        <formula>Case( $RecordType.Name, &quot;Default&quot;, 
IMAGE( 
IF( OR(Ispickval(Status, &quot;Completed&quot;), Ispickval(Status, &quot;Closed&quot;)), &quot;/resource/green_flag&quot;, 
IF(AND(Case_Age__c &gt; 180, !Ispickval(Status, &quot;Wait/CCR&quot;), !Ispickval(Status, &quot;Wait/Release&quot;)),&quot;/resource/red_flag&quot;, 
IF(AND(Case_Age__c &gt; 90,!Ispickval(Status, &quot;Wait/CCR&quot;), !Ispickval(Status, &quot;Wait/Release&quot;)),&quot;/resource/red_flag&quot;, 
IF(AND(Case_Age__c&gt; 30, ISNULL(CCR__c)), &quot;/resource/red_flag&quot;, 
IF(AND(Ispickval(Status, &quot;New&quot;),( OwnerId != $Setup.CS_Delay__c.Queue_Id__c )), &quot;/resource/red_flag&quot;, 
IF(AND(Now() - CDN_Last_Modified_Date__c &gt; 5, AND(!Ispickval(Status, &quot;Wait/CCR&quot;),!Ispickval(Status, &quot;Wait/Critical CCR&quot;), !Ispickval(Status, &quot;Wait/Release&quot;))), &quot;/resource/yellow_flag&quot;, 
IF(AND(Case_Age__c&gt; 7, ISNULL(CCR__c)), &quot;/resource/yellow_flag&quot;, 
IF(AND(Now() - CDN_Last_Modified_Date__c &gt; 7, CCR_State__c = &quot;Review&quot;), &quot;/resource/yellow_flag&quot;, 

IF(AND(Ispickval(Status, &quot;Wait/Critical CCR&quot;), Now() - CCR__r.Original_Submit_Date__c &gt; 21, Ispickval(CCR__r.Rep_Request_Type__c, &apos;Bug&apos;), Ispickval(CCR__r.RepSeverity__c,&apos;0 - No Workaround&apos;)), &quot;/resource/yellow_flag&quot;, 

IF(AND(Ispickval(Status, &quot;Wait/Critical CCR&quot;), Now() - CCR__r.Original_Submit_Date__c &gt; 60, Ispickval(CCR__r.Rep_Request_Type__c ,&apos;Bug&apos;), Ispickval(CCR__r.RepSeverity__c,&apos;0 - No Workaround&apos;),  Ispickval(CCR__r.Requestor_Urgency__c,&quot;Urgent&quot;)), &quot;/resource/yellow_flag&quot;, 

IF(AND(Now() - CCR__r.Original_Submit_Date__c &gt; 7, OR(CCR_State__c =&quot;Submitted&quot;, CCR_State__c=&quot;Evaluated&quot;, CCR_State__c= &quot;Characterized&quot;), Ispickval(CCR__r.Rep_Request_Type__c, &apos;Bug&apos;),  OR(Ispickval(CCR__r.RepSeverity__c,&quot;0 - No Workaround&quot;), AND(Ispickval(CCR__r.RepSeverity__c,&quot;1 - Workaround&quot;), Ispickval(CCR__r.Requestor_Urgency__c,&quot;Urgent&quot;)))), &quot;/resource/yellow_flag&quot;, 

IF(AND(Now() - CDN_Last_Modified_Date__c &gt; 7,AND(!ispickval(Status, &quot;Wait/CCR&quot;), !Ispickval(Status, &quot;Wait/Release&quot;), CCR_State__c != &quot;MoreInfo&quot;), OR(Ispickval(CCR__r.Rep_Request_Type__c, &apos;Enhancement&apos;), AND(Ispickval(CCR__r.Rep_Request_Type__c , &apos;Bug&apos;), OR(Ispickval(CCR__r.RepSeverity__c,&apos;2 - Minor&apos;),AND(Ispickval(CCR__r.RepSeverity__c,&apos;1 - Workaround&apos;),Ispickval(CCR__r.Requestor_Urgency__c,&apos;Default&apos;)))))),&quot;/resource/yellow_flag&quot;,&quot;/resource/green_flag&quot;)))))))))))), &quot;Error&quot;),&apos;&apos;)</formula>
        <label>Case Color</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Color_VIP__c</fullName>
        <description>VIP record type formula for case color.</description>
        <formula>Case( $RecordType.Name, 
&quot;VIP&quot;, 
IMAGE( 
IF(OR(Ispickval(Status, &quot;Completed&quot;), Ispickval(Status, &quot;Closed&quot;)), &quot;/resource/green_flag&quot;, 
IF(AND(Case_Age__c &gt; 30, !ISNULL(CCR__r.CreatedDate)), &quot;/resource/red_flag&quot;, 
IF(AND(Case_Age__c &gt; 15, ISNULL(CCR__r.CreatedDate)), &quot;/resource/red_flag&quot;, 
IF(AND(Case_Age__c &gt; 7, Case_Age__c &lt; 15, ISNULL(CCR__r.CreatedDate)), &quot;/resource/yellow_flag&quot;, 
IF(AND(Ispickval(Status, &quot;New&quot;), Now() - CDN_Last_Modified_Date__c &gt; 1), &quot;/resource/red_flag&quot;, 
IF(AND(Now() - Last_Contacted__c &gt; 5, !OR(Ispickval(Status, &quot;Wait/CCR&quot;),Ispickval(Status, &quot;Wait/Critical CCR&quot;))), &quot;/img/samples/flag_red.gif&quot;, 

IF(AND(OR(Ispickval(CCR__r.State__c,&quot;Submitted&quot;), Ispickval(CCR__r.State__c,&quot;Evaluated&quot;), Ispickval(CCR__r.State__c,&quot;Characterized&quot;)), 
NOW() - CCR__r.LastModifiedDate &gt; 1, Ispickval(Status,&quot;Wait/Critical CCR&quot;), Ispickval(CCR__r.Rep_Request_Type__c,&quot;Bug&quot;),
Ispickval(CCR__r.RepSeverity__c,&quot;0 - No Workaround&quot;)), &quot;/resource/red_flag&quot;,

IF(AND(OR(Ispickval(CCR__r.State__c,&quot;Submitted&quot;), Ispickval(CCR__r.State__c,&quot;Evaluated&quot;), Ispickval(CCR__r.State__c,&quot;Characterized&quot;)), NOW() - CCR__r.LastModifiedDate &gt; 2, Ispickval(CCR__r.Rep_Request_Type__c,&quot;Bug&quot;), AND(Ispickval(CCR__r.RepSeverity__c,&quot;1 - Workaround&quot;), Ispickval(CCR__r.Requestor_Urgency__c,&quot;Urgent&quot;))), &quot;/resource/red_flag&quot;, 

IF(AND(OR(Ispickval(CCR__r.State__c,&quot;Submitted&quot;), Ispickval(CCR__r.State__c,&quot;Evaluated&quot;), Ispickval(CCR__r.State__c,&quot;Characterized&quot;)), NOW() - CCR__r.LastModifiedDate &gt; 5, 
OR(AND(Ispickval(CCR__r.RepSeverity__c,&quot;1 - Workaround&quot;), Ispickval(CCR__r.Requestor_Urgency__c,&quot;Urgent&quot;)), Ispickval(CCR__r.RepSeverity__c,&quot;2 - Minor&quot;))), &quot;/resource/red_flag&quot;,

IF(AND(Now() - CCR__r.Original_Submit_Date__c &gt; 2, Ispickval(Status, &quot;Wait/Critical CCR&quot;),
Ispickval(CCR__r.Rep_Request_Type__c,&quot;Bug&quot;), Ispickval(CCR__r.RepSeverity__c,&quot;0 - No Workaround&quot;)), &quot;/resource/red_flag&quot;,

IF(AND(Now() - CCR__r.Original_Submit_Date__c &gt; 5, Ispickval(Status, &quot;Wait/Critical CCR&quot;), 
Ispickval(CCR__r.Rep_Request_Type__c,&quot;Bug&quot;),
AND(Ispickval(CCR__r.RepSeverity__c,&quot;1 - Workaround&quot;), Ispickval(CCR__r.Requestor_Urgency__c,&quot;Urgent&quot;))),&quot;/resource/red_flag&quot;, 

IF(AND(Now() - CCR__r.Original_Submit_Date__c &gt; 30, Ispickval(Status, &quot;Wait/Critical CCR&quot;),
Ispickval(CCR__r.Rep_Request_Type__c,&quot;Bug&quot;), OR(AND(Ispickval(CCR__r.RepSeverity__c,&quot;1 - Workaround&quot;), Ispickval(CCR__r.Requestor_Urgency__c,&quot;Default&quot;)), Ispickval(CCR__r.RepSeverity__c,&quot;2 - Minor&quot;))),  &quot;/resource/red_flag&quot;, 

IF(AND(OR(Ispickval(CCR__r.State__c,&quot;Submitted&quot;), Ispickval(CCR__r.State__c,&quot;Evaluated&quot;), Ispickval(CCR__r.State__c,&quot;Characterized&quot;)), 
NOW() - CCR__r.LastModifiedDate &gt; 5, Ispickval(CCR__r.Rep_Request_Type__c,&quot;Enhancement&quot;)), &quot;/resource/red_flag&quot;,
 
IF(AND(NOW() - CCR__r.LastModifiedDate &gt; 7, Ispickval(CCR__r.State__c,&quot;Review&quot;)), &quot;/resource/yellow_flag&quot;,&apos;/resource/green_flag&apos;)))))))))))))),&quot;Error&quot;),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Color VIP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Country__c</fullName>
        <label>Case Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Note_Update_Date__c</fullName>
        <description>This is to track the updates to case note so that the last modified date of case can be updated.</description>
        <label>Case Note Update Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Case_Resolution_Days__c</fullName>
        <formula>ClosedDate - CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Resolution Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_State__c</fullName>
        <label>Case State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Street__c</fullName>
        <label>Case Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Case_Summary_2__c</fullName>
        <label>Case Summary 2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Case_Summary__c</fullName>
        <label>Case Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Case_Transfer_Date__c</fullName>
        <description>The date/time when owner changed</description>
        <label>Case Transfer Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Case_Type__c</fullName>
        <label>Case Type</label>
        <picklist>
            <picklistValues>
                <fullName>E2E</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case_Zip__c</fullName>
        <label>Case Zip</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_Case_Numbers__c</fullName>
        <label>Child Case Numbers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Close_all_children__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Close all children</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Closed_Class__c</fullName>
        <label>Closed Class</label>
        <picklist>
            <picklistValues>
                <fullName>AE Expertise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Functionality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Usability</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <label>Completed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ContactFullName__c</fullName>
        <formula>TRIM(Contact.FirstName +&apos; &apos;+ Contact.LastName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_DBE_Flag_Formula__c</fullName>
        <description>Used on the &quot;Reassign button&quot; to check the DBE Flag on Contact.</description>
        <formula>IF(Contact.DBE_Flag__c == true, &apos;TRUE&apos;, &apos;FALSE&apos;)</formula>
        <inlineHelpText>Used on the &quot;Reassign button&quot; to check the DBE Flag on Contact.</inlineHelpText>
        <label>Contact DBE Flag Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_DBE_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contact DBE Flag</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>